fixed bug where shadow of search filters would go behind the breadcrumbs

--- a/css/sass/partials/_main.scss
+++ b/css/sass/partials/_main.scss
@@ -44,7 +44,7 @@ body {
 	border-spacing: 0;
 	position: absolute;
 		top: 0;
-		z-index: 2;
+		z-index: 4;
 	display: table;
 	width: 100%;
 	margin-bottom: 18px;
@@ -339,7 +339,7 @@ body {
 	@include border-top-left-radius(5px);
 	@include box-shadow(rgba(0, 0, 0, .5) 0 0 4px);
 	position: absolute;
-		z-index: 1;
+		z-index: 3;
 
 	div {
 		background-color: white;
@@ -357,6 +357,7 @@ body {
 	@include border-top-left-radius(0);
 	@include box-shadow(rgba(0, 0, 0, .5) 0 0 4px);
 	position: absolute;
+		z-index: 2;
 }
 
 .no-js #table {
