--- a/css/sass/partials/_site.scss
+++ b/css/sass/partials/_site.scss
@@ -46,20 +46,20 @@
 #site_register-success {
 	@include clearfix;
 
-	div.left-container {
+	div.right-container {
 		@include float-left;
 		width: 100%;
 
-		div.left {
-			margin-right: 490px;
+		div.right {
+			margin-left: 490px;
 		}
 
 	}
 
-	div.right {
+	div.left {
 		@include float-left;
 		width: 460px;
-		margin-left: -460px;
+		margin-left: -100%;
 	}
 
 }
